--- a/onedrive_sync_advanced.html
+++ b/onedrive_sync_advanced.html
@@ -104,7 +104,7 @@
         업로드 충돌 정책:
         <select id="conflictPolicy">
           <option value="open">open (기존 유지, 바뀐 파일은 건너뜀)</option>
-          <option value="replace">replace (원격 파일 덮어쓰기)</option>
+          <option value="replace" selected>replace (원격 파일 덮어쓰기)</option>
           <option value="rename">rename (새 파일 이름 바꿔 저장)</option>
         </select>
       </label>
@@ -884,6 +884,7 @@
   </script>
 </body>
 </html>
+
 
 
 
